--- a/README.Rmd
+++ b/README.Rmd
@@ -22,7 +22,7 @@ This API and package is based on [`rstudio/r-system-requirements`](https://githu
 This package can be installed from github.
 
 ```r
-remotes::install_github("josiahparry/r-sysdeps")
+remotes::install_github("josiahparry/r-sysreqs")
 ```
 
 ## Usage
